JavaCC/JavaCC-5.0-master/Project/Converter/OldConv.jj
options {
    LOOKAHEAD = 1;
}

PARSER_BEGIN(OldConv)
class OldConv {
    public static void main(String[] args)
    throws ParseException, TokenMgrError, NumberFormatException {
        OldConv parser = new OldConv(System.in);
        double result = parser.Start();
        System.out.println("Result: " + result + " feet");  // Output the result in feet
        System.out.println("Thank you for using this converter.");
    }
}
PARSER_END(OldConv)

SKIP: {" "}
TOKEN: {<EOL: "\n" | "\r" | "\r\n">}
TOKEN: {<NUM: (["0"-"9"])+>}

double Start() throws NumberFormatException :
{
    double inches = 0;
    double feet = 0;
}
{
    inches = Primary()
    {
        feet = inches / 12;  // Convert inches to feet
        System.out.println("helloooo");
    }
    <EOL>
    {
        System.out.println(inches + " inches is equal to " + feet + " feet."); // Print the result
    }
    <EOF>
    { 
        System.out.println("Thank you for using this converter.");  // Ensure thank you message prints after processing
        return feet; 
    }
}

double Primary() throws NumberFormatException :
{
    Token t;
}
{
    t = <NUM> { return Double.parseDouble(t.image); }
}
